# HULKsCodeRelease

./: .gitignore  CMakeLists.txt
CMake/: settings.cmake
doc/: Florian.md  Max.md  NaoDevVM.md
home/: launch.sh
home/configuration/duckburg/: engines.xml
scripts/: addsshkeyto  dockertool  gammaray  settings.sh  upload
scripts/files/: net
scripts/lib/: dependencies.sh  docker.sh  findnao.sh  naonet.sh  numberToIP.sh  polyfill.sh  upload.sh
src/core/: Brain.cpp  Brain.h  CMakeLists.txt  EngineBase.cpp  EngineBase.h  Intent.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  StandardIntents.h
src/engines/: CMakeLists.txt  ExampleEngine.cpp  ExampleEngine.h  LoggingEngine.cpp  LoggingEngine.h  RemoteEngine.cpp  RemoteEngine.h
src/hal/: CMakeLists.txt  Hal.md  Image.cpp  Image.h  NaoCamera.h  NaoCamera_nao.cpp  NaoCamera_stub.cpp  SensorEvents.cpp  SensorEvents.h  example.h  example_nao.cpp  example_stub.cpp  hallowlevel.cpp  hallowlevel.h  headeronly.h
src/hal/skeleton/: NaoCamera.cpp  NaoCamera.h  NaoMotor.cpp  NaoMotor.h  NaoSensors.cpp  NaoSensors.h
src/hightools/: BetterClass.h  CMakeLists.txt  Dyllo.h  StringUtil.h  TimeUtil.h
src/launcher/: CMakeLists.txt  Duckinga.cpp  conf.xml
tools/docker/: Dockerfile  docker-compose.yml
